# plant_waterer

./: Cargo.toml  README.md  erase.sh  index.html  memory.x  softdevice.sh
.cargo/: config.toml
.github/workflows/: rust.yml
.tours/: presentation.tour
src/: main.rs
src/01-minimal/: Cargo.toml
src/01-minimal/src/: main.rs
src/02-pump-control/: Cargo.toml
src/02-pump-control/src/: main.rs
src/03-bsp-audio/: Cargo.toml
src/03-bsp-audio/src/: main.rs
src/04-bsp-display/: Cargo.toml
src/04-bsp-display/src/: main.rs
src/05-watering/: Cargo.toml
src/05-watering/src/: main.rs
src/06-state-machine-watering/: Cargo.toml
src/06-state-machine-watering/src/: debouncer.rs  main.rs
src/07-ble/: .gitignore  Cargo.toml  memory.x  rebuild.sh
src/07-ble-watering/: Cargo.toml
src/07-ble-watering/src/: ble.rs  main.rs
src/07-ble/src/: ble.rs  main.rs
src/08-ble-watering/: Cargo.toml
src/08-ble-watering/src/: main.rs
