[workspace]
resolver = "2"
members = [
    "src/01-minimal",
    "src/02-pump-control",
    "src/03-bsp-audio",
    "src/04-bsp-display",
    "src/05-watering",
    "src/06-state-machine-watering",
    "src/07-ble",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
# Allows defmt to display log locations even in release
debug = true

[workspace.dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-nrf = { version = "0.2.0", features = [
    "defmt",
    "nrf52833",
    "time-driver-rtc1",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.6.3", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-futures = "0.1.1"

# bsp dependencies
microbit-bsp = { git = "https://github.com/lulf/microbit-bsp.git" }

# channels, mutexes
embassy-sync = { version = "0.6.0", features = ["defmt"] }
