[package]
name = "bsp-display"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
microbit-bsp = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
