[package]
name = "state-machine-watering"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-probe = { workspace = true }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
embassy-nrf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
